delimitter removed from seat no
